Fix logos on small

--- a/app/static/css/site-xs.styl
+++ b/app/static/css/site-xs.styl
@@ -1,3 +1,10 @@
-@media (max-width: 767px) {
-    
-}
+@media (max-width: 767px)
+  .home-logos
+    .left
+      text-align center
+      margin-bottom 5px
+    .middle
+      text-align center
+      margin-bottom 5px
+    .right
+      text-align center
