--- a/app/static/css/site.styl
+++ b/app/static/css/site.styl
@@ -107,6 +107,12 @@ select.input-extra-height
   background-color $dialog-bg-color
   border-radius $std-border-radius
 
+.home-logos
+  .middle
+    text-align center
+  .right
+    text-align right
+
 .exchange-banner
   background: url('../images/header-image-518x284.png') no-repeat
   background-color: #FFF
